# DesignPatterns

./: CMakeLists.txt
adapter/: CMakeLists.txt  main.cpp
lesson_1/: main.cpp
